# Unity-CppServer-Multiplay

./: README.md
Client/Data/: DropTable.json  ItemTable.json  MonsterTable.json  PlayerTable.json  ShopTable.json  SkillTable.json
Client/Src/: PoolTypes.cs  Protocol.cs
Client/Src/Data/: DataLoader.cs  ItemTable.cs  ItemTableData.cs  MonsterTable.cs  MonsterTableData.cs  PlayerTable.cs  PlayerTableData.cs  ShopTable.cs  ShopTableData.cs  SkillTable.cs  SkillTableData.cs
Client/Src/Item/: AtkBoostBuff.cs  Buff.cs  BuffRegistry.cs  DefenseBoostBuff.cs  ItemEffect.cs  ItemType.cs  MonsterDropObject.cs  SpeedBoostBuff.cs
Client/Src/Managers/: DataManager.cs  FlockJob.cs  FlockManager.cs  FlockManagerBase.cs  FlockManagerJob.cs  GameManager.cs  InventoryManager.cs  Managers.cs  PlayerManager.cs  PoolManager.cs  ShopManager.cs  SkillManager.cs  SpawnManager.cs  UIManager.cs
Client/Src/Monster/: Monster.cs
Client/Src/Network/: ITransport.cs  NetworkChecker.cs  NetworkManager.cs  PacketHandler.cs  PacketHeader.cs  PacketId.cs  PacketListener.cs  TcpTransport.cs  UdpTransport.cs
Client/Src/Player/: MyPlayer.cs  Player.cs  RemotePlayer.cs
Client/Src/Shader/: SpriteDot2D.shader
Client/Src/Skill/: FireBall.cs  IceArrow.cs  IceArrowSkill.cs  Skill.cs  StarSkill.cs  SwordBeam.cs
Client/Src/Sklill/: FireBallSkill.cs  IProjectile.cs  Star.cs  SwordBeamSkill.cs
Client/Src/Test/: TestAutoMover.cs
Client/Src/UI/HUD/: HUD.cs  HUDBuffList.cs  HUDBuffSlot.cs  HUDPlayerInfoLayer.cs  HUDSkillLayer.cs  HUDSkillSlot.cs
Client/Src/UI/HeadOn/: MonsterHeadOnUI.cs
Client/Src/UI/Popup/: InventoryPopup.cs  InventorySlotUI.cs  LoginPopup.cs  PopupBase.cs  ShopPopup.cs  ShopSlot.cs  SkillPopup.cs  SkillSlot.cs
Client/Src/Util/: Boundary.cs  CameraController.cs  ComponentExtensions.cs
Server/: .gitignore  CMakeLists.txt  CMakePresets.json  config.json.example  gen_proto.bat  run.bat
Server/include/: GameContext.h
Server/include/DB/: AccountRepository.h  CurrencyRepository.h  DBManager.h  InventoryRepository.h  SkillRepository.h
Server/include/Game/: AccountService.h  GameService.h  InventoryService.h  MonsterService.h  MonsterSpawner.h  MonsterState.h  PlayerService.h  ShopService.h  SkillService.h
Server/include/Handler/: CombatHandler.h  CommonHandler.h  ShopHandler.h  SkillHandler.h
Server/include/Network/: NotifyHandler.h  PacketHandler.h  PacketHeader.h  PacketId.h  Server.h  Session.h  SessionManager.h  UdpHandler.h  UdpServer.h
Server/include/Table/: DataManager.h  DropTable.h  ItemTable.h  MonsterTable.h  PlayerTable.h  ShopTable.h  SkillTable.h
Server/include/Util/: JobQueue.h  Timer.h
Server/proto/: Protocol.proto
Server/sql/: shop_inventory.sql
Server/src/: main.cpp
Server/src/DB/: AccountRepository.cpp  CurrencyRepository.cpp  DBManager.cpp  InventoryRepository.cpp  SkillRepository.cpp
Server/src/Game/: AccountService.cpp  GameService.cpp  InventoryService.cpp  MonsterService.cpp  MonsterSpawner.cpp  PlayerService.cpp  ShopService.cpp  SkillService.cpp
Server/src/Handler/: CombatHandler.cpp  CommonHandler.cpp  ShopHandler.cpp  SkillHandler.cpp
Server/src/Network/: NotifyHandler.cpp  PacketHandler.cpp  Server.cpp  Session.cpp  SessionManager.cpp  UdpHandler.cpp  UdpServer.cpp
Server/src/Table/: DataManager.cpp  DropTable.cpp  ItemTable.cpp  MonsterTable.cpp  PlayerTable.cpp  ShopTable.cpp  SkillTable.cpp
